<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>fr.smile.core</groupId>
	<artifactId>owsi-core-parent</artifactId>
	<version>0.40-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>OWSI Core - Parent</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<owsi-core.maven-release-plugin.version>2.5.2</owsi-core.maven-release-plugin.version>
		<maven-jgitflow-plugin.version>1.0-m5.1</maven-jgitflow-plugin.version>
		
 		<maven.compiler.release>17</maven.compiler.release>
	</properties>

	<modules>
		<module>owsi-core</module>
	</modules>

	<build>
		<extensions>
			<!-- this is to enable the scp protocol in site deploy -->
			<extension>
				<groupId>com.gkatzioura.maven.cloud</groupId>
				<artifactId>s3-storage-wagon</artifactId>
				<version>2.3</version>
			</extension>
		</extensions>
		<plugins>
			<plugin>
				<groupId>external.atlassian.jgitflow</groupId>
				<artifactId>jgitflow-maven-plugin</artifactId>
				<version>${maven-jgitflow-plugin.version}</version>
				<dependencies>
					<dependency>
						<groupId>com.jcraft</groupId>
						<artifactId>jsch</artifactId>
						<version>0.1.54</version>
					</dependency>
				</dependencies>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<flowInitContext>
						<masterBranchName>master</masterBranchName>
						<developBranchName>dev</developBranchName>
						<featureBranchPrefix>ft-</featureBranchPrefix>
						<releaseBranchPrefix>rl-</releaseBranchPrefix>
						<hotfixBranchPrefix>hf-</hotfixBranchPrefix>
						<versionTagPrefix>v</versionTagPrefix>
					</flowInitContext>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>${owsi-core.maven-release-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>4.0.0-M11</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>3.4.5</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<!-- Project information -->

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<repositories>
		<repository>
			<id>bucket-release-repo</id>
			<url>https://apidae-sit-packages.s3.eu-west-3.amazonaws.com/release</url>
		</repository>
	</repositories>

	<scm>
		<url>git@github.com:apidae-tourisme/owsi-core-parent.git</url>
		<connection>scm:git:git@github.com:apidae-tourisme/owsi-core-parent.git</connection>
		<developerConnection>scm:git:https://github.com/apidae-tourisme/owsi-core-parent.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<distributionManagement>
		<snapshotRepository>
			<id>snapshot-bucket</id>
			<url>s3://apidae-sit-packages/snapshot</url>
		</snapshotRepository>
		<repository>
			<id>release-bucket</id>
			<url>s3://apidae-sit-packages/release</url>
		</repository>
	</distributionManagement>

</project>
